working on uploads

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "run-p --race dev cy:run"
   },
   "dependencies": {
+    "aws-sdk": "^2.630.0",
     "compression": "^1.7.1",
     "connect-mongo": "^3.2.0",
     "express": "^4.17.1",
